Add stats controller and make generic stats responses
